--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,7 +14,7 @@
     <nav class="nav-links">
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
-      <a href="skills.html">Skills</a>
+      <a href="skills.html">Skill</a>
     </nav>
   </header>
 
